<resources>
    <string name="app_name">人情笔记</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_give">$- 随礼</string>
    <string name="title_home">主页</string>
    <string name="title_receive">$+ 收礼</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="type">随/收礼</string>
    <string name="name">姓名</string>
    <string name="money">金额</string>
    <string name="reason">事由</string>
    <string name="zero">0</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="context_menu_item_delete_title">询问</string>
    <string name="context_menu_item_delete_ask">你确定要删除此条记录吗？</string>
    <string name="data">日期</string>
</resources>