<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditActivity">

    <Spinner
        android:id="@+id/spinner_reason"
        android:layout_width="213dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_reason"
        app:layout_constraintStart_toEndOf="@+id/text_view_reason"
        app:layout_constraintTop_toTopOf="@+id/text_view_reason"
        android:entries="@array/array_reason"
        android:layout_marginLeft="24dp" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/button_ok"
        app:layout_constraintTop_toTopOf="@+id/button_ok"
        android:layout_marginLeft="84dp" />

    <TextView
        android:id="@+id/text_view_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/text_view_type"
        app:layout_constraintTop_toBottomOf="@+id/text_view_type" />

    <TextView
        android:id="@+id/text_view_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/money"
        app:layout_constraintEnd_toEndOf="@+id/text_view_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_name" />

    <TextView
        android:id="@+id/text_view_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/reason"
        app:layout_constraintEnd_toEndOf="@+id/text_view_money"
        app:layout_constraintTop_toBottomOf="@+id/text_view_money" />

    <EditText
        android:id="@+id/edit_text_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_money"
        app:layout_constraintStart_toEndOf="@+id/text_view_money"
        app:layout_constraintTop_toTopOf="@+id/text_view_money"
        android:layout_marginLeft="24dp" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_name"
        app:layout_constraintStart_toEndOf="@+id/text_view_name"
        app:layout_constraintTop_toTopOf="@+id/text_view_name"
        android:layout_marginLeft="24dp" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="213dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_type"
        app:layout_constraintStart_toEndOf="@+id/text_view_type"
        app:layout_constraintTop_toTopOf="@+id/text_view_type"
        android:entries="@array/array_type"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/text_view_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="24dp"
        android:text="@string/data"
        app:layout_constraintBottom_toTopOf="@+id/spinner_type"
        app:layout_constraintStart_toStartOf="@+id/spinner_type"
        android:layout_marginLeft="44dp" />

</androidx.constraintlayout.widget.ConstraintLayout>